chore: postDTO record로 변경 및 수정